# pyetp

./: .gitattributes  .gitignore  README.md  compose.yml  config.py  conftest.py  db.py  mkdocs.yml  pyproject.toml  pytest-coverage.txt  test_etp_client.py  test_etp_clientv2.py  test_mesh.py  test_tile.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish-docs.yml  publish.yml  snyk.yml
data/: model_hexa_0.epc  model_hexa_0.h5  model_hexa_ts_0.epc  model_hexa_ts_0.h5  model_hexa_ts_0_new.epc  model_hexa_ts_0_new.h5  test.gri
docs/: index.md
docs/api/: etp_client.md  rddms_client.md  resqml_objects.md
docs/api/etp_client/: etp_objects.md  index.md
docs/api/resqml_objects/: serializers.md
docs/tutorials/: set_up_regular_surface.md  using_the_rddms_client.md  using_the_sync_rddms_client.md
etp_client/: __init__.py  client.py  deps.py  etp.avpr  etp_client.py  etp_helper.py  types.py  uri.py  utils.py  utils_xml.py
examples/: 2Dgrid.ipynb  mesh.ipynb
examples/tutorials/set_up_regular_surface/: crs_obj.txt  crs_xml.txt  epc_obj.txt  epc_xml.txt  generate_output.py  gri_obj.txt  gri_xml.txt  set_up_regular_surface.py
examples/tutorials/using_the_rddms_client/: dataspaces.txt  generate_output.py  gri_lo.txt  gri_resources.txt  using_the_rddms_client.py
examples/tutorials/using_the_sync_rddms_client/: using_the_sync_rddms_client.py
pyetp/: __init__.py  client.py  config.py  types.py  uri.py  utils_xml.py
resqml_objects/: __init__.py  generated.py
src/energistics/: array_mapping.py  avro_handler.py  base.py  serializers.py  types.py  uris.py  validators.py
src/pyetp/: __init__.py  client.py  errors.py  types.py  uri.py  utils.py  utils_arrays.py  utils_xml.py
src/pyetp/resqml_objects/: generated.py
src/rddms_io/: __init__.py  block_array.py  client.py  data_types.py  sync_client.py
src/rddms_utils/: mesh_functions.py  surf_functions.py
src/resqml_objects/: data_types.py  epc_readers.py  parsers.py  serializers.py  surface_helpers.py
tests/: README.md  _test_mesh.py  compose.yml  conftest.py  test_array_utils.py  test_common_models.py  test_etp_client.py  test_etp_clientv2.py  test_mesh.py  test_rddms_client.py  test_rddms_client_sync.py  test_resqml_surface_helpers.py  test_resqmlv201_objects.py  test_tile.py
tests/test_etp_objects/: conftest.py  test_avro_message_handling.py  test_core_protocols.py  test_data_array_protocols.py  test_dataspace_protocols.py  test_datatypes.py  test_discovery_protocols.py  test_store_protocols.py  test_transaction_protocols.py  test_uris.py
tests/test_tutorials/: test_set_up_regular_surface.py  test_using_the_rddms_client.py  test_using_the_sync_rddms_client.py
(+103 files in other folders)
