[build-system]
requires = ["setuptools >= 80", "setuptools_scm[simple] >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetp"
dynamic = ["version"]
description = "Interface with OSDU RDDMS using ETP protocol"
authors = [
    {name = "Adam Cheng", email = "52572642+adamchengtkc@users.noreply.github.com"}
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy >= 1.26.3",
    "websockets >= 12.0",
    "lxml >=4.9.4",
    "pydantic >= 1.10",
    "async-timeout >= 5.0",
    "xtgeo >= 4.0.0",
    "xsdata >= 24.3.1",
    "etpproto >= 1.0.7",
    "resqpy >= 5.1.10",
]

[project.urls]
homepage = "https://github.com/equinor/pyetp"

[dependency-groups]
dev = [
    "pytest >= 7.4.4",
    "pytest-asyncio >= 0.23.4",
    "fakeredis >= 2.21.0",
    "pytest-cov >= 4.1.0",
    "ipykernel >= 6.29.5",
]

[tool.pytest.ini_options]
addopts = "-ra -v --color=yes"
testpaths = ["tests"]


[tool.setuptools_scm]
version_file = "src/pyetp/_version.py"
